--- a/src/design/Dashboard.css
+++ b/src/design/Dashboard.css
@@ -1,20 +1,32 @@
-/* Dashboard.css */
+
 body{
   background-color: white;
 }
 .dashboard-header {
-  width: 100%;
-  background-color: #09479e;
+  position: relative;
+  background-color: #0747a6;
   color: white;
   padding: 20px 0;
   text-align: center;
-  font-size: 2em;
-  font-weight: bold;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(241, 242, 243, 0.3);
 }
+
+.admin-title {
+  font-size: 2.5rem; 
+  font-weight: bold;
+  margin: 0;
+}
+
+.logged-in-text {
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  transform: translateY(-50%);
+  font-size: 0.9rem; 
+  font-weight: normal;
+  opacity: 0.9;
+}
+
+
 
 .dashboard-cards {
   display: flex;
